Fix the quote text alignment.
Use section-3 container and quote-container to
properly align the quote text so that the page
looks and functions more like the final product.

--- a/styles.css
+++ b/styles.css
@@ -128,13 +128,15 @@ a {
   background-color: #E5E7EB;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: center;
   padding: 120px;
 }
 
 .quote-container {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
 }
 
 .quote {
